// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty > renders with actions correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with actions slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions">Actions slot</div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with as correctly 1`] = `
"<section class="" data-pohon="empty-root">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`empty > renders with avatar correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-pohon="avatar-image"></span>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`empty > renders with body slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">Body slot</div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with class correctly 1`] = `
"<div class="gap-6" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with description correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`empty > renders with description slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description slot</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with footer slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <div class="" data-pohon="empty-footer">Footer slot</div>
</div>"
`;

exports[`empty > renders with header slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header">Header slot</div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with icon correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`empty > renders with leading slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header">Leading slot<h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with primary variant naked correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with primary variant outline correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with primary variant soft correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with primary variant solid correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with primary variant subtle correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with size lg correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with size md correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with size sm correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with size xl correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with size xs correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with title correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`empty > renders with title slot correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title slot</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`empty > renders with ui correctly 1`] = `
"<div class="" data-pohon="empty-root">
  <div class="" data-pohon="empty-header"><span data-pohon="avatar-root"><span class="iconify i-lucide:file" aria-hidden="true" data-pohon="avatar-icon"></span></span>
    <h2 class="" data-pohon="empty-title">Title</h2>
    <div class="">Description</div>
  </div>
  <div class="" data-pohon="empty-body">
    <div class="" data-pohon="empty-actions"><button type="button" class="" data-pohon="button-base"><span class="iconify i-lucide:plus" aria-hidden="true" data-pohon="button-leading-icon"></span><span class="" data-pohon="button-label">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;
